--- a/KirkMyXMX/KirkMyXMX/KirkMyXMX.csproj
+++ b/KirkMyXMX/KirkMyXMX/KirkMyXMX.csproj
@@ -213,6 +213,8 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\kirk7byStyle.css" />
+    <Content Include="Content\KStile.css" />
     <Content Include="Content\my-css\normalize.css" />
     <Content Include="Content\my-css\style.css" />
     <Content Include="favicon.ico" />
@@ -281,6 +283,7 @@
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Service References\Application Insights\ConnectedService.json" />
+    <Content Include="Views\Shared\_LayoutMain.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
